fix toc spacing

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -77,3 +77,18 @@
     }
   }
 }
+
+#ndMucluc {
+  padding-top: 10px;
+}
+ul#markdown-toc {
+  li {
+    margin-bottom: 5px;
+    ul {
+      margin-top: 5px;
+      li {
+        margin-bottom: 5px;
+      }
+    }
+  }
+}
